все тесты готовы, Docker, Readme.